--- a/app.html
+++ b/app.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="app.css" />
-    <title>Gallery</title>
-  </head>
-  <body>
-    <div>
-      <h1>
-        Gallery
-      </h1>
-      <p>Share all your photos right here</p>
-    </div>
-    <!-- Photo grid start -->
-    <div id="app"></div>
 
-    <!-- HINT in this comment you can see 
+<head>
+  <link rel="stylesheet" type="text/css" href="app.css" />
+  <title>Gallery</title>
+</head>
+
+<body>
+  <div>
+    <h1>
+      Gallery
+    </h1>
+    <p>Share all your photos right here</p>
+  </div>
+  <!-- Photo grid start -->
+  <div id="app"></div>
+
+  <!-- HINT in this comment you can see 
         the future behavior of the gallery -->
+  <!-- 
+  <div class="row">
+    <div class="column">
+      <img src="https://source.unsplash.com/P44RIGl9V54" />
+    </div>
+    <div class="column">
+      <img src="https://source.unsplash.com/P44RIGl9V54" />
+    </div>
+    <div class="column">
+      <img src="https://source.unsplash.com/P44RIGl9V54" />
+    </div>
+    <div class="column">
+      <img src="https://source.unsplash.com/P44RIGl9V54" />
+    </div>
+  </div> -->
 
-    <!-- <div class="row">
-        <div class="column">
-            <img src="https://source.unsplash.com/P44RIGl9V54" />
-            <img src="https://source.unsplash.com/P44RIGl9V54" />
-            <img src="https://source.unsplash.com/P44RIGl9V54" />
-            <img src="https://source.unsplash.com/P44RIGl9V54" />
-            <img src="https://source.unsplash.com/P44RIGl9V54" />
-        </div>
-    </div> -->
-    <!-- Photo grid finish -->
-    <script src="app.js"></script>
-  </body>
+
+  <!-- Photo grid finish -->
+  <script src="app.js"></script>
+</body>
+
 </html>
